<resources>
    <string name="app_name">Store Visit App</string>
    <string name="imageview" />
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="admin">Admin</string>
    <string name="nik_212159">NIK : 212159</string>
    <string name="total_score">Total Store</string>
    <string name="percentage">Percentage</string>
    <string name="actual_score">Actual Store</string>
    <string name="menu">Menu</string>
    <string name="list_store">List Store</string>
    <string name="cari_toko_distributor">Cari Toko / Distributor</string>
    <!--Mapbox-->
    <string name="mapbox_access_token">pk.eyJ1IjoiZmFyaGFucmVuaW5kYSIsImEiOiJja3h5MTNuc2k0eDkwMnd1Yjhtd3U0aTZxIn0.9aM9G63s9ZebKNcI9ae13g</string>
    <string name="store_detail">Store Detail</string>
    <string name="last_visit">Last Visit</string>
    <string name="reg_name">Reg Name</string>
    <string name="no_visit">No Visit</string>
    <string name="visit">Visit</string>
    <string name="store_id">Store ID</string>
    <string name="dc_name">DC Name</string>
    <string name="acc_name">Acc Name</string>
    <string name="sub_name">Sub Name</string>
    <string name="chan_name">Chan Name</string>
    <string name="area_name">Area Name</string>
    <string name="main_menu">Main Menu</string>
    <string name="st0001">ST0001</string>
    <string name="indomaret_komsen">Indomaret Komsen</string>
    <string name="cluster_small">Cluster : Small</string>
    <string name="tt_regular_ertm_big_pareto">TT Regular - ERTM Big - Pareto</string>
    <string name="information">Information</string>
    <string name="product">Product</string>
    <string name="check">Check</string>
    <string name="sku_promo">SKU Promo</string>
    <string name="ringkasan">Ringkasan</string>
    <string name="oos">OOS</string>
    <string name="store_investment">Store Investment</string>
    <string name="dashboard_store">Dashboard Store</string>
    <string name="osa">OSA</string>
    <string name="september_2020">September 2020</string>
    <string name="_50">50%</string>
    <string name="target">Target</string>
    <string name="_40">40</string>
    <string name="pencapaian">Pencapaian</string>
    <string name="_20">20</string>
    <string name="npd">NPD</string>
    <string name="_80">80%</string>
    <string name="selesai">Selesai</string>
    <string name="kunjungan_pada_bulan_januari_2023">Kunjungan pada bulan Januari 2023</string>
    <string name="kunjungan">Kunjungan</string>
    <string name="target_install">Target install</string>
    <string name="cdfdpc">CDFDPC</string>
    <string name="dashboard">Dashboard</string>
    <string name="transmission">Transmission</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="belum_visit">Belum Visit</string>
</resources>