<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.kunjungan.KunjunganActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/imageview"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/btn_back"
                android:fontFamily="@font/inter_medium"
                android:text="@string/list_store"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_back"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_border_putih_filled"
                android:drawableStart="@drawable/baseline_search_24"
                android:drawablePadding="15dp"
                android:padding="8dp"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/cari_toko_distributor"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/navbar"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            mapbox:mapbox_cameraZoom="20"
            mapbox:mapbox_styleUrl="@string/mapbox_style_mapbox_streets" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_toko"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/box"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_rv" />

</RelativeLayout>