<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imageview"
        android:src="@drawable/logo_pitjarus" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_bg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/imageview"
                android:src="@drawable/ic_baseline_people_alt_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_account"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="-3dp"
                android:layout_toEndOf="@id/iv_username"
                android:fontFamily="@font/inter_medium"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-15dp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:maxLines="2"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/imageview"
                android:src="@drawable/ic_baseline_lock_open_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="-3dp"
                android:layout_toEndOf="@id/iv_password"
                android:fontFamily="@font/inter_medium"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-15dp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="2"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/bluePitjarus"
        android:text="@string/login"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/app_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_medium"
        android:textSize="14sp" />

</RelativeLayout>